--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "iconsax-reactjs": "^0.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.3",
     "tailwindcss": "^4.1.13"
   },
